--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "application-name",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "start": "node app.js"
-  },
+  "name": "node-example",
+  "version": "0.0.1",  
   "dependencies": {
     "express": "3.3.5",
     "ejs": "*",
     "stylus": "*",
     "nforce": "*"
+  },
+  "engines": {
+    "node": "0.8.x",
+    "npm": "1.1.x"
   }
 }
